jni-macros/tests/ui/native_method_struct/fail/raw_shorthand_wrong_parameter_type.stderr
error[E0308]: mismatched types
  --> tests/ui/native_method_struct/fail/raw_shorthand_wrong_parameter_type.rs:20:14
   |
18 |       let _method = native_method! {
   |  ___________________-
19 | |         raw fn MyClass::myMethod(value: jint) -> void,
20 | |         fn = my_method_impl
   | |              ^^^^^^^^^^^^^^ expected fn pointer, found fn item
21 | |     };
   | |_____- expected due to this
   |
   = note: expected fn pointer `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>, i32)`
                 found fn item `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>, i64) {my_method_impl}`
